--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,12 @@
       href="https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Gowun+Dodum&family=Nanum+Gothic+Coding&family=Noto+Sans+KR:wght@100..900&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/static/pretendard.css"
+    />
+
     <title>React App</title>
   </head>
   <body className="bg-[#FFFDF7]">
