--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>React App</title>
+    <title>CHEF TOO</title>
   </head>
   <body className="bg-[#FFFDF7]">
     <noscript>You need to enable JavaScript to run this app.</noscript>
